layout issues 1

--- a/client/src/Escape/Play.css
+++ b/client/src/Escape/Play.css
@@ -475,6 +475,7 @@ p{
     position: relative;
     background-size: contain;
     margin-right: 250px;
+    cursor: pointer;
 }
 
 .italicText {
@@ -546,7 +547,6 @@ p{
   
   @media screen and (max-height: 850px) {
     .sidebar {
-        padding-top: 15px;
         left: 0;
         bottom: 0;
         width: 100%;
